--- a/style.css
+++ b/style.css
@@ -330,6 +330,22 @@ h1 {
     background-color:#35af4a;
 }
 
+.cart--limpar{
+    padding:20px 30px;
+    border-radius:20px;
+    background-color:#d04848;
+    color:#FFF;
+    cursor:pointer;
+    text-align:center;
+    margin-top:20px;
+    border:2px solid #f76363;
+    transition: all ease .2s; 
+}
+
+.cart--limpar:hover{
+    background-color:#af3535;
+}
+
 @media (max-width:1000px) {
     .pizza-area {
         grid-template-columns: repeat(2, 1fr);
@@ -421,3 +437,4 @@ h1 {
         display:block;
     }
 }
+
